update deepfence fluentbit plugin (https://github.com/deepfence/ThreatMapper/issues/728)

--- a/deepfence_agent/tools/apache/fluentbit/out_deepfence/local-fluent-bit.conf
+++ b/deepfence_agent/tools/apache/fluentbit/out_deepfence/local-fluent-bit.conf
@@ -20,21 +20,18 @@
 [OUTPUT]
     Name    deepfence
     Match   cpu*
-    # Id      cpu_metrics
-    dfschema https
-    dfhost  127.0.0.1
-    dfport  443
-    dfpath  /ingest
-    dftopic deepfence-${TEST}-cpu
-    dfkey asfsdagfdouadsgfa
+    Id cpu
+    schema https
+    host  127.0.0.1
+    port  443
+    path  /ingest
 
 [OUTPUT]
     Name  deepfence
     Match dummy*
-    # Id      cpu_metrics
-    dfschema http
-    dfhost  127.0.0.1
-    dfport  8082
-    # dfpath  /ingest
-    dftopic deepfence-${TEST}-dummy
+    Id dummy
+    schema http
+    host  127.0.0.1
+    port  443
+    path  /ingest
     
