--- a/deepfence_agent/tools/apache/fluentbit/td-agent-bit.conf
+++ b/deepfence_agent/tools/apache/fluentbit/td-agent-bit.conf
@@ -108,7 +108,7 @@
 [INPUT]
     Name tail
     Path ${DF_INSTALL_DIR}/var/log/fenced/compliance/*.log
-    Tag compliance
+    Tag compliance-scan
     storage.type filesystem
     Buffer_Chunk_Size 4K
     Mem_Buf_Limit 5MB
@@ -156,74 +156,73 @@
 [OUTPUT]
     Name  deepfence
     Match secret-scan
-    dfhost ${MGMT_CONSOLE_URL}
-    dfport ${MGMT_CONSOLE_PORT}
-    dfpath /ingest
-    dftopic secret-scan
-    dfschema https
-    dfkey ${DEEPFENCE_KEY}
-    #tls.crt_file ${DF_INSTALL_DIR}/etc/td-agent-bit/fluentbit-client.crt
-    #tls.key_file ${DF_INSTALL_DIR}/etc/td-agent-bit/fluentbit-client.key
+    schema https
+    host ${MGMT_CONSOLE_URL}
+    port ${MGMT_CONSOLE_PORT}
+    path /ingest/secrets
+    api_token ${DEEPFENCE_KEY}
+    #cert_file ${DF_INSTALL_DIR}/etc/td-agent-bit/fluentbit-client.crt
+    #key_file ${DF_INSTALL_DIR}/etc/td-agent-bit/fluentbit-client.key
 
 [OUTPUT]
     Name  deepfence
     Match secret-scan-logs
-    dfhost ${MGMT_CONSOLE_URL}
-    dfport ${MGMT_CONSOLE_PORT}
-    dfpath /ingest
-    dftopic secret-scan-logs
-    dfschema https
-    dfkey ${DEEPFENCE_KEY}
-    #tls.crt_file ${DF_INSTALL_DIR}/etc/td-agent-bit/fluentbit-client.crt
-    #tls.key_file ${DF_INSTALL_DIR}/etc/td-agent-bit/fluentbit-client.key
+    id secret-scan-logs
+    schema https
+    host ${MGMT_CONSOLE_URL}
+    port ${MGMT_CONSOLE_PORT}
+    path /ingest/secret-scan-logs
+    api_token ${DEEPFENCE_KEY}
+    #cert_file ${DF_INSTALL_DIR}/etc/td-agent-bit/fluentbit-client.crt
+    #key_file ${DF_INSTALL_DIR}/etc/td-agent-bit/fluentbit-client.key
 
 [OUTPUT]
     Name  deepfence
-    Match compliance
-    dfhost ${MGMT_CONSOLE_URL}
-    dfport ${MGMT_CONSOLE_PORT}
-    dfpath /ingest
-    dftopic compliance
-    dfschema https
-    dfkey ${DEEPFENCE_KEY}
-    #tls.crt_file ${DF_INSTALL_DIR}/etc/td-agent-bit/fluentbit-client.crt
-    #tls.key_file ${DF_INSTALL_DIR}/etc/td-agent-bit/fluentbit-client.key
+    Match compliance-scan
+    id compliance-scan
+    schema https
+    host ${MGMT_CONSOLE_URL}
+    port ${MGMT_CONSOLE_PORT}
+    path /ingest/compliance
+    api_token ${DEEPFENCE_KEY}
+    #cert_file ${DF_INSTALL_DIR}/etc/td-agent-bit/fluentbit-client.crt
+    #key_file ${DF_INSTALL_DIR}/etc/td-agent-bit/fluentbit-client.key
 
 [OUTPUT]
     Name  deepfence
     Match compliance-scan-logs
-    dfhost ${MGMT_CONSOLE_URL}
-    dfport ${MGMT_CONSOLE_PORT}
-    dfpath /ingest
-    dftopic compliance-scan-logs
-    dfschema https
-    dfkey ${DEEPFENCE_KEY}
-    #tls.crt_file ${DF_INSTALL_DIR}/etc/td-agent-bit/fluentbit-client.crt
-    #tls.key_file ${DF_INSTALL_DIR}/etc/td-agent-bit/fluentbit-client.key
+    id compliance-scan-logs
+    schema https
+    host ${MGMT_CONSOLE_URL}
+    port ${MGMT_CONSOLE_PORT}
+    path /ingest/compliance-scan-logs
+    api_token ${DEEPFENCE_KEY}
+    #cert_file ${DF_INSTALL_DIR}/etc/td-agent-bit/fluentbit-client.crt
+    #key_file ${DF_INSTALL_DIR}/etc/td-agent-bit/fluentbit-client.key
 
 [OUTPUT]
     Name  deepfence
     Match malware-scan
-    dfhost ${MGMT_CONSOLE_URL}
-    dfport ${MGMT_CONSOLE_PORT}
-    dfpath /ingest
-    dftopic malware-scan
-    dfschema https
-    dfkey ${DEEPFENCE_KEY}
-    #tls.crt_file ${DF_INSTALL_DIR}/etc/td-agent-bit/fluentbit-client.crt
-    #tls.key_file ${DF_INSTALL_DIR}/etc/td-agent-bit/fluentbit-client.key
+    id malware-scan
+    schema https
+    host ${MGMT_CONSOLE_URL}
+    port ${MGMT_CONSOLE_PORT}
+    path /ingest/malware
+    api_token ${DEEPFENCE_KEY}
+    #cert_file ${DF_INSTALL_DIR}/etc/td-agent-bit/fluentbit-client.crt
+    #key_file ${DF_INSTALL_DIR}/etc/td-agent-bit/fluentbit-client.key
 
 [OUTPUT]
-    Name  deepfence
+    Name deepfence
     Match malware-scan-logs
-    dfhost ${MGMT_CONSOLE_URL}
-    dfport ${MGMT_CONSOLE_PORT}
-    dfpath /ingest
-    dftopic malware-scan-logs
-    dfschema https
-    dfkey ${DEEPFENCE_KEY}
-    #tls.crt_file ${DF_INSTALL_DIR}/etc/td-agent-bit/fluentbit-client.crt
-    #tls.key_file ${DF_INSTALL_DIR}/etc/td-agent-bit/fluentbit-client.key
+    id malware-scan-logs
+    schema https
+    host ${MGMT_CONSOLE_URL}
+    port ${MGMT_CONSOLE_PORT}
+    path /ingest/malware-scan-logs
+    api_token ${DEEPFENCE_KEY}
+    #cert_file ${DF_INSTALL_DIR}/etc/td-agent-bit/fluentbit-client.crt
+    #key_file ${DF_INSTALL_DIR}/etc/td-agent-bit/fluentbit-client.key
 
 
 #[OUTPUT]
