update fluent-bit plugin to support auth (https://github.com/deepfence/ThreatMapper/issues/728)

--- a/deepfence_agent/tools/apache/fluentbit/out_deepfence/Makefile
+++ b/deepfence_agent/tools/apache/fluentbit/out_deepfence/Makefile
@@ -1,7 +1,7 @@
 FLUENT_BIT?=/opt/fluent-bit/bin/fluent-bit
 
 all:
-	go mod tidy && go build -buildmode=c-shared -o out_deepfence.so
+	go mod tidy -v && go build -buildmode=c-shared -o out_deepfence.so
 
 clean:
 	rm -rf *.so *.h *~
@@ -10,4 +10,4 @@ docker:
 	docker build -t fluentbit:deepfence .
 
 run: all
-	TEST=abc $(FLUENT_BIT) -c local-fluent-bit.conf
+	$(FLUENT_BIT) -c local-fluent-bit.conf
