--- a/deepfence_agent/tools/apache/fluentbit/td-agent-bit.conf
+++ b/deepfence_agent/tools/apache/fluentbit/td-agent-bit.conf
@@ -156,71 +156,71 @@
 [OUTPUT]
     Name  deepfence
     Match secret-scan
-    schema https
-    host ${MGMT_CONSOLE_URL}
-    port ${MGMT_CONSOLE_PORT}
-    path /ingest/secrets
-    api_token ${DEEPFENCE_KEY}
+    Schema https
+    Console_host ${MGMT_CONSOLE_URL}
+    Console_port ${MGMT_CONSOLE_PORT}
+    Path /deepfence/ingest/secrets
+    Token ${DEEPFENCE_KEY}
     #cert_file ${DF_INSTALL_DIR}/etc/td-agent-bit/fluentbit-client.crt
     #key_file ${DF_INSTALL_DIR}/etc/td-agent-bit/fluentbit-client.key
 
 [OUTPUT]
     Name  deepfence
     Match secret-scan-logs
-    id secret-scan-logs
-    schema https
-    host ${MGMT_CONSOLE_URL}
-    port ${MGMT_CONSOLE_PORT}
-    path /ingest/secret-scan-logs
-    api_token ${DEEPFENCE_KEY}
+    Id secret-scan-logs
+    Schema https
+    Console_host ${MGMT_CONSOLE_URL}
+    Console_port ${MGMT_CONSOLE_PORT}
+    Path /deepfence/ingest/secret-scan-logs
+    Token ${DEEPFENCE_KEY}
     #cert_file ${DF_INSTALL_DIR}/etc/td-agent-bit/fluentbit-client.crt
     #key_file ${DF_INSTALL_DIR}/etc/td-agent-bit/fluentbit-client.key
 
 [OUTPUT]
     Name  deepfence
     Match compliance-scan
-    id compliance-scan
-    schema https
-    host ${MGMT_CONSOLE_URL}
-    port ${MGMT_CONSOLE_PORT}
-    path /ingest/compliance
-    api_token ${DEEPFENCE_KEY}
+    Id compliance-scan
+    Schema https
+    Console_host ${MGMT_CONSOLE_URL}
+    Console_port ${MGMT_CONSOLE_PORT}
+    Path /deepfence/ingest/compliance
+    Token ${DEEPFENCE_KEY}
     #cert_file ${DF_INSTALL_DIR}/etc/td-agent-bit/fluentbit-client.crt
     #key_file ${DF_INSTALL_DIR}/etc/td-agent-bit/fluentbit-client.key
 
 [OUTPUT]
     Name  deepfence
     Match compliance-scan-logs
-    id compliance-scan-logs
-    schema https
-    host ${MGMT_CONSOLE_URL}
-    port ${MGMT_CONSOLE_PORT}
-    path /ingest/compliance-scan-logs
-    api_token ${DEEPFENCE_KEY}
+    Id compliance-scan-logs
+    Schema https
+    Console_host ${MGMT_CONSOLE_URL}
+    Console_port ${MGMT_CONSOLE_PORT}
+    Path /deepfence/ingest/compliance-scan-logs
+    Token ${DEEPFENCE_KEY}
     #cert_file ${DF_INSTALL_DIR}/etc/td-agent-bit/fluentbit-client.crt
     #key_file ${DF_INSTALL_DIR}/etc/td-agent-bit/fluentbit-client.key
 
 [OUTPUT]
     Name  deepfence
     Match malware-scan
-    id malware-scan
-    schema https
-    host ${MGMT_CONSOLE_URL}
-    port ${MGMT_CONSOLE_PORT}
-    path /ingest/malware
-    api_token ${DEEPFENCE_KEY}
+    Id malware-scan
+    Schema https
+    Console_host ${MGMT_CONSOLE_URL}
+    Console_port ${MGMT_CONSOLE_PORT}
+    Path /deepfence/ingest/malware
+    Token ${DEEPFENCE_KEY}
     #cert_file ${DF_INSTALL_DIR}/etc/td-agent-bit/fluentbit-client.crt
     #key_file ${DF_INSTALL_DIR}/etc/td-agent-bit/fluentbit-client.key
 
 [OUTPUT]
     Name deepfence
     Match malware-scan-logs
-    id malware-scan-logs
-    schema https
-    host ${MGMT_CONSOLE_URL}
-    port ${MGMT_CONSOLE_PORT}
-    path /ingest/malware-scan-logs
-    api_token ${DEEPFENCE_KEY}
+    Id malware-scan-logs
+    Schema https
+    Console_host ${MGMT_CONSOLE_URL}
+    Console_port ${MGMT_CONSOLE_PORT}
+    Path /deepfence/ingest/malware-scan-logs
+    Token ${DEEPFENCE_KEY}
     #cert_file ${DF_INSTALL_DIR}/etc/td-agent-bit/fluentbit-client.crt
     #key_file ${DF_INSTALL_DIR}/etc/td-agent-bit/fluentbit-client.key
 
