--- a/deepfence_agent/tools/apache/fluentbit/out_deepfence/local-fluent-bit.conf
+++ b/deepfence_agent/tools/apache/fluentbit/out_deepfence/local-fluent-bit.conf
@@ -3,35 +3,37 @@
     Daemon       Off
     Log_Level    info
     # Parsers_File parsers.conf
-    Plugins_File local-plugins.conf
+    Plugins_File /root/ThreatMapper/deepfence_agent/tools/apache/fluentbit/out_deepfence/local-plugins.conf
     HTTP_Server  Off
     HTTP_Listen  0.0.0.0
     HTTP_Port    2020
 
 [INPUT]
     Name cpu
-    Tag  cpu.local
-    Interval_Sec 1
+    Tag dummy.cve
+    # Interval_Sec 1
 
 [INPUT]
     Name dummy
-    Tag  dummy.local
+    Tag dummy.local
+    # Interval_Sec 3
 
 [OUTPUT]
-    Name    deepfence
-    Match   cpu*
-    Id cpu
-    schema https
-    host  127.0.0.1
-    port  443
-    path  /ingest
+    Name deepfence
+    Match dummy.cve
+    Id cve
+    Schema https
+    Console_host 159.89.174.123
+    Console_port 443
+    Path /deepfence/ingest/vulnerabilities
+    Token c369d073-1858-46c1-b59b-391852108411
 
 [OUTPUT]
-    Name  deepfence
-    Match dummy*
-    Id dummy
-    schema http
-    host  127.0.0.1
-    port  443
-    path  /ingest
-    
+    Name deepfence
+    Match dummy.local
+    Id local
+    Schema https
+    Console_host 159.89.174.123
+    Console_port 443
+    Path /deepfence/ingest/vulnerabilities
+    Token c369d073-1858-46c1-b59b-391852108411
