move ingester configrution to env vars (https://github.com/deepfence/ThreatMapper/issues/728)

--- a/deepfence_ingester/Dockerfile
+++ b/deepfence_ingester/Dockerfile
@@ -18,25 +18,26 @@ RUN apk add --no-cache kafkacat
 
 COPY deepfence_ingester/entrypoint.sh /entrypoint.sh
 
-ENV POSTGRES_USER_DB_HOST=deepfence-postgres \
-    POSTGRES_USER_DB_PORT=5432 \
-    POSTGRES_USER_DB_USER=deepfence \
-    POSTGRES_USER_DB_PASSWORD=deepfence \
-    POSTGRES_USER_DB_NAME=users \
-    POSTGRES_USER_DB_SSLMODE=disable \
-    REDIS_HOST=deepfence-redis \
-    REDIS_PORT=6379 \
-    REDIS_DB_NUMBER=0 \
-    NEO4J_HOST=deepfence-neo4j \
-    NEO4J_BOLT_PORT=7687 \
-    NEO4J_USER=neo4j \
-    NEO4J_PASSWORD=password \
-    HTTP_LISTEN_ENDPOINT=8090 \
-    SAAS_DEPLOYMENT=false \
-    KAFKA_BROKERS=deepfence-kafka-broker:9092 \
-    KAFKA_TOPIC_PARTITIONS=3 \
-    KAFKA_TOPIC_REPLICAS=1 \
-    KAFKA_TOPIC_RETENTION_MS="86400000" 
+ENV DEEPFENCE_POSTGRES_USER_DB_HOST=deepfence-postgres \
+    DEEPFENCE_POSTGRES_USER_DB_PORT=5432 \
+    DEEPFENCE_POSTGRES_USER_DB_USER=deepfence \
+    DEEPFENCE_POSTGRES_USER_DB_PASSWORD=deepfence \
+    DEEPFENCE_POSTGRES_USER_DB_NAME=users \
+    DEEPFENCE_POSTGRES_USER_DB_SSLMODE=disable \
+    DEEPFENCE_REDIS_HOST=deepfence-redis \
+    DEEPFENCE_REDIS_PORT=6379 \
+    DEEPFENCE_REDIS_DB_NUMBER=0 \
+    DEEPFENCE_NEO4J_HOST=deepfence-neo4j \
+    DEEPFENCE_NEO4J_BOLT_PORT=7687 \
+    DEEPFENCE_NEO4J_USER=neo4j \
+    DEEPFENCE_NEO4J_PASSWORD=password \
+    DEEPFENCE_METRICS_PORT=8181 \
+    DEEPFENCE_SAAS_DEPLOYMENT=false \
+    DEEPFENCE_KAFKA_BROKERS=deepfence-kafka-broker:9092 \
+    DEEPFENCE_KAFKA_TOPIC_PARTITIONS=3 \
+    DEEPFENCE_KAFKA_TOPIC_REPLICAS=1 \
+    DEEPFENCE_KAFKA_TOPIC_RETENTION_MS="86400000" \
+    DEEPFENCE_DEBUG=false
 
 COPY --from=build /go/deepfence_ingester/deepfence_ingester /usr/local/bin/deepfence_ingester
 EXPOSE 8090
