--- a/deepfence_agent/tools/apache/fluentbit/td-agent-bit.conf
+++ b/deepfence_agent/tools/apache/fluentbit/td-agent-bit.conf
@@ -156,6 +156,7 @@
 [OUTPUT]
     Name  deepfence
     Match secret-scan
+    Id secret-scan
     Schema https
     Console_host ${MGMT_CONSOLE_URL}
     Console_port ${MGMT_CONSOLE_PORT}
