--- a/deepfence_worker/Dockerfile
+++ b/deepfence_worker/Dockerfile
@@ -10,20 +10,20 @@ FROM alpine:3.16
 MAINTAINER Deepfence Inc
 LABEL deepfence.role=system
 
-ENV POSTGRES_USER_DB_HOST=deepfence-postgres \
-    POSTGRES_USER_DB_PORT=5432 \
-    POSTGRES_USER_DB_USER=deepfence \
-    POSTGRES_USER_DB_PASSWORD=deepfence \
-    POSTGRES_USER_DB_NAME=users \
-    POSTGRES_USER_DB_SSLMODE=disable \
-    REDIS_HOST=deepfence-redis \
-    REDIS_PORT=6379 \
-    REDIS_DB_NUMBER=0 \
-    NEO4J_HOST=deepfence-neo4j \
-    NEO4J_BOLT_PORT=7687 \
-    NEO4J_USER=neo4j \
-    NEO4J_PASSWORD=password \
-    SAAS_DEPLOYMENT=false
+ENV DEEPFENCE_POSTGRES_USER_DB_HOST=deepfence-postgres \
+    DEEPFENCE_POSTGRES_USER_DB_PORT=5432 \
+    DEEPFENCE_POSTGRES_USER_DB_USER=deepfence \
+    DEEPFENCE_POSTGRES_USER_DB_PASSWORD=deepfence \
+    DEEPFENCE_POSTGRES_USER_DB_NAME=users \
+    DEEPFENCE_POSTGRES_USER_DB_SSLMODE=disable \
+    DEEPFENCE_REDIS_HOST=deepfence-redis \
+    DEEPFENCE_REDIS_PORT=6379 \
+    DEEPFENCE_REDIS_DB_NUMBER=0 \
+    DEEPFENCE_NEO4J_HOST=deepfence-neo4j \
+    DEEPFENCE_NEO4J_BOLT_PORT=7687 \
+    DEEPFENCE_NEO4J_USER=neo4j \
+    DEEPFENCE_NEO4J_PASSWORD=password \
+    DEEPFENCE_SAAS_DEPLOYMENT=false
 
 COPY --from=build /go/deepfence_worker/deepfence_worker /usr/local/bin/deepfence_worker
 COPY deepfence_worker/entrypoint.sh /entrypoint.sh
