Add file server #725

--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -121,7 +121,7 @@ backend deepfence-file-server-9000
     http-request deny if ! valid_http_method
 
     http-request replace-path /file-server(.*) \1
-    http-request deny if { url_param(X-Amz-Algorithm) -m found  } { url_param(X-Amz-Credential) -m found  } { url_param(X-Amz-Date) -m found  } { url_param(X-Amz-Expires) -m found  } { url_param(X-Amz-SignedHeaders) -m found  } { url_param(X-Amz-Signature) -m found  }
+    http-request deny unless { url_param(X-Amz-Algorithm) -m found  } { url_param(X-Amz-Credential) -m found  } { url_param(X-Amz-Date) -m found  } { url_param(X-Amz-Expires) -m found  } { url_param(X-Amz-SignedHeaders) -m found  } { url_param(X-Amz-Signature) -m found  }
 
     acl is_dev_build str("${IS_DEV_BUILD}") -m str "true"
     # CORS
