--- a/.dockerignore
+++ b/.dockerignore
@@ -1,7 +1,11 @@
 **/.git
+**/.github
 **/.pnpm-store
 **/.vscode
 **/.cache
 **/node_modules
-scope.tar
-cloud-agent.tar
+**/scope.tar
+**/cloud-agent.tar
+**/docs
+images
+pentesting-reports
