--- a/deepfence_worker/Dockerfile
+++ b/deepfence_worker/Dockerfile
@@ -4,6 +4,7 @@ ADD deepfence_worker /go/deepfence_worker/
 ADD deepfence_utils /go/deepfence_utils/
 WORKDIR /go/deepfence_worker/
 RUN apk add --no-cache git make
+RUN go install github.com/hibiken/asynq/tools/asynq
 # "make vendor" is run before separately to avoid docker cache invalidation
 RUN make deepfence_worker
 
@@ -27,6 +28,7 @@ ENV DEEPFENCE_POSTGRES_USER_DB_HOST=deepfence-postgres \
     DEEPFENCE_SAAS_DEPLOYMENT=false
 
 COPY --from=build /go/deepfence_worker/deepfence_worker /usr/local/bin/deepfence_worker
+COPY --from=build /go/bin/asynq /usr/local/bin/asynq
 COPY deepfence_worker/entrypoint.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
 
