--- a/deepfence_server/Dockerfile
+++ b/deepfence_server/Dockerfile
@@ -31,6 +31,12 @@ ENV DEEPFENCE_POSTGRES_USER_DB_HOST=deepfence-postgres \
     DEEPFENCE_NEO4J_BOLT_PORT=7687 \
     DEEPFENCE_NEO4J_USER=neo4j \
     DEEPFENCE_NEO4J_PASSWORD=password \
+    DEEPFENCE_MINIO_HOST=deepfence-file-server \
+    DEEPFENCE_MINIO_PORT=9000 \
+    DEEPFENCE_MINIO_USER=deepfence \
+    DEEPFENCE_MINIO_PASSWORD=deepfence \
+    DEEPFENCE_MINIO_BUCKET=deepfence \
+    DEEPFENCE_MINIO_SECURE=false \
     DEEPFENCE_HTTP_LISTEN_ENDPOINT=8080 \
     DEEPFENCE_SAAS_DEPLOYMENT=false \
     DEEPFENCE_KAFKA_BROKERS=deepfence-kafka-broker:9092
