--- a/.gitignore
+++ b/.gitignore
@@ -33,7 +33,7 @@ deepfence_frontend/product_version.txt
 deepfence_agent/tools/apache/scope/proto/
 
 deepfence_server/vendor
-
+deepfence_worker/vendor
 deepfence_ingester/vendor
 deepfence_ingester/deepfence_ingester
 
