Add priorityClassName so that the daemonset pods that need to run on every Kubernetes worker node can have priority over other pods on the node.

--- a/deployment-scripts/helm-charts/deepfence-agent/values.yaml
+++ b/deployment-scripts/helm-charts/deepfence-agent/values.yaml
@@ -25,6 +25,8 @@ image:
 managementConsoleUrl: &managementConsoleUrl ""
 managementConsolePort: &managementConsolePort "443"
 
+priorityClassName: ""
+
 # Auth: Get deepfence api key from UI -> Settings -> User Management
 deepfenceKey: &deepfenceKey ""
 # If kubernetes secret is already defined externally, change following value to false
