--- a/deployment-scripts/helm-charts/deepfence-console/templates/elasticsearch/statefulset.yaml
+++ b/deployment-scripts/helm-charts/deepfence-console/templates/elasticsearch/statefulset.yaml
@@ -1,6 +1,5 @@
 {{- if not .Values.saas_deployment }}
 {{- if and (eq "deepfence-es" .Values.db.elasticsearch.host) (eq "9200" .Values.db.elasticsearch.port) }}
----
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
@@ -16,11 +15,13 @@ spec:
   selector:
     matchLabels:
       name: deepfence-es
+      {{- include "deepfence-console.selectorLabels" . | nindent 6 }}
   template:
     metadata:
       labels:
         name: deepfence-es
         app: deepfence-console
+        {{- include "deepfence-console.selectorLabels" . | nindent 8 }}
     spec:
       affinity:
         podAntiAffinity:
@@ -103,29 +104,5 @@ spec:
           requests:
             storage: "{{ .Values.volume.esStorage }}"
         storageClassName: {{ .Values.volume.storageClass }}
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: deepfence-es
-  labels:
-    app: deepfence-console
-    {{- include "deepfence-console.labels" . | nindent 4 }}
-  namespace: {{ .Release.Namespace }}
-spec:
-  type: {{ .Values.elasticsearch.service.type }}
-  clusterIP: None
-  selector:
-    name: deepfence-es
-  ports:
-    - name: deepfence-es-port-1
-      port: 9200
-      protocol: TCP
-      targetPort: 9200
-    - name: deepfence-es-port-2
-      port: 9300
-      protocol: TCP
-      targetPort: 9300
----
-  {{- end }}
+{{- end }}
 {{- end }}
