Increase postgresql connection pool limit #797

--- a/deepfence_backend/dockerify/api/Dockerfile
+++ b/deepfence_backend/dockerify/api/Dockerfile
@@ -26,7 +26,8 @@ ENV PYTHONUNBUFFERED=1 \
     REDIS_DB_NUMBER=0 \
     PYTHONPATH=/app/code \
     DOCKERVERSION=20.10.8 \
-    AUTHLIB_INSECURE_TRANSPORT=true
+    AUTHLIB_INSECURE_TRANSPORT=true \
+    VULNERABILITY_SCAN_CONCURRENCY=25
 
 COPY ./requirements.txt /tmp/requirements.txt
 
