--- a/deepfence_worker/Dockerfile
+++ b/deepfence_worker/Dockerfile
@@ -1,7 +1,6 @@
 FROM golang:1.19-alpine3.16 AS build
 
 RUN apk add --no-cache git make
-RUN go install github.com/hibiken/asynq/tools/asynq@latest
 ADD deepfence_worker /go/deepfence_worker/
 ADD deepfence_utils /go/deepfence_utils/
 WORKDIR /go/deepfence_worker/
@@ -34,10 +33,9 @@ ENV DEEPFENCE_POSTGRES_USER_DB_HOST=deepfence-postgres \
     DEEPFENCE_SAAS_DEPLOYMENT=false
 
 RUN apt update && apt install curl -y && \
-    curl -sSfL https://raw.githubusercontent.com/anchore/grype/main/install.sh | sh -s -- -b /usr/local/bin
+    curl -sSfL https://raw.githubusercontent.com/anchore/grype/main/install.sh | sh -s -- -b /usr/local/bin v0.55.0
 
 COPY --from=build /go/deepfence_worker/deepfence_worker /usr/local/bin/deepfence_worker
-COPY --from=build /go/bin/asynq /usr/local/bin/asynq
 COPY deepfence_worker/entrypoint.sh /entrypoint.sh
 COPY deepfence_worker/grype.yaml /usr/local/bin/grype.yaml
 RUN chmod +x /entrypoint.sh
