--- a/deployment-scripts/docker-compose.yml
+++ b/deployment-scripts/docker-compose.yml
@@ -183,6 +183,25 @@ services:
       driver: "json-file"
       options:
         max-size: "1g"
+        
+  deepfence-scheduler:
+    container_name: deepfence-scheduler
+    image: ${IMAGE_REPOSITORY:-deepfenceio}/deepfence_worker_ce:${DF_IMG_TAG:-1.4.1}
+    ulimits:
+      core: 0
+    restart: on-failure
+    command: scheduler
+    networks:
+    - deepfence_net
+    depends_on:
+    - deepfence-redis
+    - deepfence-postgres
+    volumes:
+    - /etc/docker/certs.d:/etc/docker/certs.d:ro
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "1g"
   
   deepfence-ui:
     container_name: deepfence-ui
