Add new worker queue and job scheduler #805

--- a/deployment-scripts/docker-compose.yml
+++ b/deployment-scripts/docker-compose.yml
@@ -190,7 +190,7 @@ services:
     ulimits:
       core: 0
     restart: on-failure
-    command: scheduler
+    command: /usr/local/bin/deepfence_worker scheduler
     networks:
     - deepfence_net
     depends_on:
