Put more abstraction around minio

--- a/deepfence_ctl/Makefile
+++ b/deepfence_ctl/Makefile
@@ -4,7 +4,7 @@ vendor:
 	go mod tidy -v
 	go mod vendor
 
-deepfencectl:
+deepfencectl: ./*.go ./**/*.go
 	CGO_ENABLED=0 go build -o deepfencectl
 
 clean:
