--- a/deepfence_frontend/packages/ui-components/package.json
+++ b/deepfence_frontend/packages/ui-components/package.json
@@ -39,6 +39,7 @@
     "@tanstack/react-table": "^8.5.13",
     "ariakit": "2.0.0-next.41",
     "classnames": "^2.3.2",
+    "cva": "npm:class-variance-authority@^0.4.0",
     "lodash-es": "^4.17.21",
     "tailwind-merge": "^1.6.0",
     "tailwindcss-radix": "^2.6.0"
