--- a/deployment-scripts/docker-compose.yml
+++ b/deployment-scripts/docker-compose.yml
@@ -298,13 +298,17 @@ services:
         max-size: "1g"
   
   deepfence-ingester:
-    image: ${IMAGE_REPOSITORY:-deepfenceio}/deepfence_ingester_ce:${DF_IMG_TAG:-1.3.0}
+    image: ${IMAGE_REPOSITORY:-deepfenceio}/deepfence_worker_ce:${DF_IMG_TAG:-1.3.0}
     hostname: deepfence-ingester
     container_name: deepfence-ingester
     ports:
     - "127.0.0.1:8090:8090"
+    environment:
+      - DEEPFENCE_MODE=ingester
     networks:
     - deepfence_net
+    depends_on:
+    - deepfence-kafka-broker
     logging:
       driver: "json-file"
       options:
