--- a/deepfence_backend/requirements.txt
+++ b/deepfence_backend/requirements.txt
@@ -5,6 +5,7 @@ gevent==21.12.0
 click==8.1.3
 elasticsearch==7.10.1
 eventlet==0.33.1
+dnspython<2.3.0
 Flask==2.1.2
 Flask-RESTful==0.3.9
 flask-cors==3.0.10
