--- a/.gitmodules
+++ b/.gitmodules
@@ -17,4 +17,4 @@
 [submodule "deepfence_agent/plugins/YaraHunter"]
 	path = deepfence_agent/plugins/YaraHunter
 	url = git@github.com:deepfence/YaraHunter.git
-	branch = main
+	branch = kafka-rest
