--- a/deepfence_agent/tools/apache/scope/docker/Dockerfile.cloud-agent
+++ b/deepfence_agent/tools/apache/scope/docker/Dockerfile.cloud-agent
@@ -1,11 +1,11 @@
-FROM alpine:3.14.2
+FROM alpine:3.17.1
 LABEL maintainer="Deepfence Inc"
 LABEL deepfence.role=system
 
 ENV CHECKPOINT_DISABLE=true DOCKERVERSION=20.10.8 MGMT_CONSOLE_PORT=443
 
 WORKDIR /home/deepfence
-RUN apk add --no-cache --update bash conntrack-tools iproute2 util-linux curl bind-tools grep tar podman \
+RUN apk add --no-cache --update bash conntrack-tools iproute2 util-linux curl bind-tools grep tar podman git wget \
     && curl -fsSLO https://download.docker.com/linux/static/stable/x86_64/docker-${DOCKERVERSION}.tgz \
     && tar xzvf docker-${DOCKERVERSION}.tgz --strip 1 -C /usr/local/bin docker/docker \
     && rm docker-${DOCKERVERSION}.tgz \
@@ -20,11 +20,22 @@ RUN apk add --no-cache --update bash conntrack-tools iproute2 util-linux curl bi
     && curl -L https://github.com/kubernetes-sigs/cri-tools/releases/download/$VERSION/crictl-${VERSION}-linux-amd64.tar.gz --output crictl-${VERSION}-linux-amd64.tar.gz \
     && tar zxvf crictl-$VERSION-linux-amd64.tar.gz -C /usr/local/bin \
     && rm -f crictl-$VERSION-linux-amd64.tar.gz \
-	&& rm -rf /var/cache/apk/*
+	&& rm -rf /var/cache/apk/* \
+    && /bin/sh -c "$(curl -fsSL https://raw.githubusercontent.com/turbot/steampipe/main/install.sh)" \
+    && addgroup -S deepfence && adduser -S deepfence -G deepfence \
+    && apk add fluent-bit --repository=https://dl-cdn.alpinelinux.org/alpine/edge/testing
 
-COPY ./deepfence_exe /home/deepfence/
-# COPY ./capture_topology_container.sh /home/deepfence/capture_start.sh
-# RUN cp /home/deepfence/capture_start.sh /home/deepfence/capture_stop.sh \
-#     && cp /home/deepfence/capture_start.sh /home/deepfence/capture_status.sh \
-#     && chmod +x /home/deepfence/*.sh
+COPY fluentbit/out_deepfence/out_deepfence.so /opt/td-agent-bit/bin/
+USER deepfence
+COPY scope/docker/deepfence_exe /home/deepfence/
+
+WORKDIR /opt/steampipe
+USER root
+RUN chown -R deepfence /opt/steampipe /home/deepfence/deepfence_exe
+
+USER deepfence
+RUN steampipe plugin install steampipe \
+    && steampipe plugin install kubernetes \
+    && git clone https://github.com/turbot/steampipe-mod-kubernetes-compliance.git
+
 ENTRYPOINT ["/home/deepfence/deepfence_exe"]
