--- a/deepfence_frontend/apps/dashboard/package.json
+++ b/deepfence_frontend/apps/dashboard/package.json
@@ -17,6 +17,7 @@
     "codegen:clean": "rm -rf ./src/api/generated"
   },
   "dependencies": {
+    "@radix-ui/react-navigation-menu": "^1.1.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/user-event": "^14.4.3",
     "classnames": "^2.3.2",
