--- a/.gitmodules
+++ b/.gitmodules
@@ -16,7 +16,7 @@
 	branch = main
 [submodule "golang_deepfence_sdk"]
 	path = golang_deepfence_sdk
-	url = https://github.com/deepfence/golang_deepfence_sdk
+	url = git@github.com:deepfence/golang_deepfence_sdk.git
 	branch = main
 [submodule "deepfence_agent/plugins/YaraHunter"]
 	path = deepfence_agent/plugins/YaraHunter
