--- a/deepfence_frontend/apps/dashboard/package.json
+++ b/deepfence_frontend/apps/dashboard/package.json
@@ -18,9 +18,11 @@
   },
   "dependencies": {
     "@ant-design/plots": "^1.2.5",
+    "@antv/g6": "^4.8.5",
     "@radix-ui/react-navigation-menu": "^1.1.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/user-event": "^14.4.3",
+    "@types/react-virtualized": "^9.21.21",
     "classnames": "^2.3.2",
     "lodash-es": "^4.17.21",
     "react": "^18.2.0",
@@ -28,6 +30,7 @@
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.8.0",
     "react-use": "^17.4.0",
+    "react-virtualized": "^9.22.3",
     "tailwind-merge": "^1.9.0",
     "ui-components": "workspace:*"
   },
