--- a/deployment-scripts/docker-compose.yml
+++ b/deployment-scripts/docker-compose.yml
@@ -61,8 +61,9 @@ services:
     - NEO4J_dbms_memory_pagecache_size=2600m
     - NEO4J_dbms.memory.heap.initial_size=3800m
     - NEO4J_dbms_memory_heap_max__size=3800m
-    - NEO4J_AUTH=neo4j/password
     - NEO4JLABS_PLUGINS=["apoc"]
+    env_file:
+    - 'creds.env'
     ports:
       - "0.0.0.0:7474:7474"
       - "0.0.0.0:7687:7687"
@@ -168,6 +169,8 @@ services:
       driver: "json-file"
       options:
         max-size: "1g"
+    env_file:
+      - 'creds.env'
 
   deepfence-worker:
     container_name: deepfence-worker
@@ -184,6 +187,8 @@ services:
       driver: "json-file"
       options:
         max-size: "1g"
+    env_file:
+      - 'creds.env'
 
   deepfence-scheduler:
     container_name: deepfence-scheduler
@@ -217,6 +222,8 @@ services:
       driver: "json-file"
       options:
         max-size: "1g"
+    env_file:
+      - 'creds.env'
 
   deepfence-secret-scanner:
     container_name: deepfence-secret-scanner
