Execute some long running task at startup
Simplify cron jobs creation

--- a/deployment-scripts/docker-compose.yml
+++ b/deployment-scripts/docker-compose.yml
@@ -231,6 +231,7 @@ services:
     depends_on:
       - deepfence-redis
       - deepfence-postgres
+      - deepfence-worker
     logging:
       driver: "json-file"
       options:
