--- a/deepfence_frontend/apps/dashboard/package.json
+++ b/deepfence_frontend/apps/dashboard/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-navigation-menu": "^1.1.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/user-event": "^14.4.3",
+    "@xstate/react": "^3.2.0",
     "classnames": "^2.3.2",
     "lodash-es": "^4.17.21",
     "react": "^18.2.0",
@@ -28,7 +29,8 @@
     "react-router-dom": "^6.8.0",
     "react-use": "^17.4.0",
     "tailwind-merge": "^1.9.0",
-    "ui-components": "workspace:*"
+    "ui-components": "workspace:*",
+    "xstate": "^4.36.0"
   },
   "devDependencies": {
     "@openapitools/openapi-generator-cli": "^2.5.2",
