--- a/deployment-scripts/docker-compose.yml
+++ b/deployment-scripts/docker-compose.yml
@@ -232,6 +232,7 @@ services:
       - deepfence-redis
       - deepfence-postgres
       - deepfence-worker
+      - deepfence-neo4j
     logging:
       driver: "json-file"
       options:
